# Web3_XBridge

solana/: .env.example  Anchor.toml  Cargo.toml  THIRD_PARTY_LICENSES.md  package.json  readme.md
solana/programs/web3-bridge-v2/: Cargo.toml
solana/programs/web3-bridge-v2/src/: bridge_in.rs  bridge_out.rs  common.rs  lib.rs
solana/programs/web3-bridge-v2/src/bridge_in/: instructions.rs  states.rs  structs.rs
solana/programs/web3-bridge-v2/src/bridge_in/instructions/: accept_ownership.rs  claim.rs  initialize.rs  pause.rs  refund.rs  set_mpc.rs  set_oracle.rs  transfer_ownership.rs  unpause.rs  verify.rs
solana/programs/web3-bridge-v2/src/bridge_out/: adaptors.rs  events.rs  instructions.rs  structs.rs
solana/programs/web3-bridge-v2/src/bridge_out/adaptors/: allbridge.rs  bridgers.rs  cctp.rs  debridgedln.rs  mayan_swift.rs  meson.rs  wanchain.rs  wormhole.rs
solana/programs/web3-bridge-v2/src/bridge_out/instructions/: bridge_to.rs  bridge_to_log.rs  bridge_to_log_commission.rs
solana/programs/web3-bridge-v2/src/common/: constants.rs  errors.rs  utils.rs
