[package]
name = "web3_bridge_v2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
resolver = "2"

[lib]
crate-type = ["cdylib", "lib"]
name = "web3_bridge_v2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
libsecp256k1 = { version = "0.7.1" }
hex = { version = "0.4.3" }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
dex-solana = { version = "0.1.0", path = "../dex-solana", features = ["cpi"] }
arrayref = { version = "0.3.6" }
# spl-token = { version = "6.0.0" }

postman = { version = "0.1.0", path = "../postman", features = ["cpi"] }
serde_json = { version = "1.0.117" }
serde = { version = "1.0.203", features = ["derive"] }
# wormhole-token-bridge-solana = { version = "0.0.1-alpha.4", default-features = false, features = ["cpi", "mainnet"] }
byteorder = "1.4"
bs58 = { version = "0.5.1" }

# [patch.crates-io]
# anchor-spl = { version = "0.28.0", package = "wormhole-token-bridge-solana" }
# solana-program = { version = "1.16.24", package = "wormhole-token-bridge-solana" }
# mpl-token-metadata = { version = "^1.13.2", package = "wormhole-token-bridge-solana" }